--- a/index.html
+++ b/index.html
@@ -4,92 +4,155 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>realtime chat app.</title>
+    <script src="/socket.io/socket.io.js"></script>
     <style>
-      body {
-        margin: 0;
-        padding-bottom: 3rem;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Helvetica, Arial, sans-serif;
-      }
+              body {
+                margin: 0;
+                padding-bottom: 3rem;
+                font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+                  Helvetica, Arial, sans-serif;
+              }
 
-      #form {
-        background: #181818dc;
-        padding: 0.25rem;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        display: flex;
-        height: 3rem;
-        box-sizing: border-box;
-        <!-- backdrop-filter: blur(10px); -->
-      }
+              #form {
+                background: #181818dc;
+                padding: 0.25rem;
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                display: flex;
+                height: 3rem;
+                box-sizing: border-box;
+                <!-- backdrop-filter: blur(10px); -->
+              }
 
-      #input {
-        border: none;
-        padding: 0 1rem;
-        flex-grow: 1;
-        margin: 0.25rem;
-      }
+              #input {
+                border: none;
+                padding: 0 1rem;
+                flex-grow: 1;
+                margin: 0.25rem;
+              }
 
-      #input:focus {
-        outline: none;
-      }
-      #form > button {
-        background: #4e8357;
-        border: none;
-        padding: 0 1rem;
-        margin: 0.25rem;
-        border-radius: 1px;
-        outline: none;
-        color: #fff;
-      }
+              #input:focus {
+                outline: none;
+              }
+              #form > button {
+                background: #4e8357;
+                border: none;
+                padding: 0 1rem;
+                margin: 0.25rem;
+                border-radius: 1px;
+                outline: none;
+                color: #fff;
+              }
 
-      #messages {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
-      #messages > li {
-        padding: 0.5rem 1rem;
-      }
-      #messages > li:nth-child(odd) {
-        background: #efefef;
-      }
+              #messages {
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+              }
+
+              #messages > li {
+              padding: 0.5rem 1rem;
+              display: flex;
+              flex-direction: column;
+              align-items: flex-start;
+              }
+      // Display client own messages on the right side
+
+              #messages > li.right {
+              align-items: flex-end;
+              }
+
+              #messages > li.right > span {
+                background-color: #efefef;
+                color: #000;
+              }
+      //and other clients messages on the left side
+              #messages > li.left {
+              align-items: flex-start;
+              }
+
+              #messages > li.left > span {
+              background-color: #4e8357;
+              color: #fff;
+              }
+
+              #messages > li > span {
+                display: inline-block;
+                background-color: #4e8357;
+                color: #fff;
+                padding: 0.5rem;
+                border-radius: 0.5rem;
+                margin-bottom: 0.5rem;
+              }
+
+              #messages > li {
+                padding: 0.5rem 1rem;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+              }
+              #messages > li:nth-child(odd) {
+                background: #efefef;
+                align-items: flex-end;
+              }
+              #messages > li > span {
+                display: inline-block;
+                background-color: #4e8357;
+                color: #fff;
+                padding: 0.5rem;
+                border-radius: 0.5rem;
+                margin-bottom: 0.5rem;
+              }
+              #messages > li:nth-child(odd) > span {
+                background-color: #efefef;
+                color: #000;
+              }
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
+    <ul class="messages"></ul>
     <form id="form" action="">
       <label for="input">メッセージ:</label>
       <input id="input" autocomplete="off" />
       <button type="submit">送信</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
-      let socket = io();
+      $(function () {
+        let socket = io.connect();
 
-      const form = document.getElementById("form");
-      const input = document.getElementById("input");
-      const messages = document.getElementById("messages");
+        const form = document.getElementById("form");
+        const input = document.getElementById("input");
+        const messages = document.getElementsByClassName("messages");
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
-      });
+        form.addEventListener("submit", function (e) {
+          e.preventDefault();
+          if (input.value) {
+            const msg_socketId = socket.id;
+            socket.emit("chat message", input.value, msg_socketId);
+            input.value = "";
+          }
+        });
 
-      socket.on("chat message", function (msg) {
-        let item = document.createElement("li");
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
+        socket.on("client message", (msg, indent) => {
+          let item = document.createElement("li");
+          item.classList.add(indent);
+          window.alert(item);
+          window.alert(item.classList);
+          let span = document.createElement("span");
+          span.textContent = msg;
+          item.appendChild(span);
+          window.alert(item);
+          messages.appendChild(item);
+          window.alert(messages);
+
+          //下までスクロール
+          window.scrollTo(0, document.body.scrollHeight);
+        });
       });
     </script>
-  </body>
-  <body>
-    real time chat app.
   </body>
 </html>
